# imlgst-plugins-bad

gst/: meson.build
gst/imlscale/: Makefile.am  meson.build
